--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,22 @@
     <!-- Base application theme. -->
     <style name="Theme.My_first_app" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/mint_accent</item>
+        <item name="colorPrimaryVariant">@color/mint_border</item>
+        <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/mint_border</item>
+        <item name="colorSecondaryVariant">@color/mint_accent</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/dark_background</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <!-- Cancel Button Style -->
+    <style name="CancelButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="backgroundTint">@color/cancel_orange</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="cornerRadius">10dp</item>
     </style>
 </resources>
