--- a/app/src/main/res/layout/fragment_robot_control.xml
+++ b/app/src/main/res/layout/fragment_robot_control.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:screenOrientation="portrait"
     android:padding="16dp"
     android:background="@color/dark_background"
     tools:context=".RobotControlFragment">
