--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -12,8 +12,8 @@
         android:title="Camera AI" />
     
     <item
-        android:id="@+id/nav_settings"
-        android:icon="@android:drawable/ic_menu_preferences"
-        android:title="Settings" />
+        android:id="@+id/nav_map"
+        android:icon="@android:drawable/ic_menu_camera"
+        android:title="Auto" />
         
 </menu> 
